Fix question page styling so the answers all stay on one line and there is no overlap with the images in the next section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,10 +78,14 @@ main {
     width: 80%;
 }
 
+.answers > div {
+    display: flex;
+}
+
 #extra {
     display: flex;
     justify-content: space-evenly;
-    margin-top: 50px;
+    margin: 100px 0 -50px;
     text-align: center;
 }
 
